# Arnhem-scripts

./: Makefile  locations_input.yaml  prep_data.py  prep_locations.py  prep_people.py  prep_postmarks.py  pyproject.toml  transform_locations.py
data/: locations.csv  people.csv  postmarks.csv
